# pdfviewer

./: Cargo.toml  README.md  installation.sh  test.json
.github/workflows/: format-checker.yml
src/: cli.rs  main.rs
ui/: index.html  index.js  index.ts  package-lock.json  package.json  style.css
