[package]
name = "typst-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3.6", features = ["websocket"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
