[package]
name = "typst-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.3", features = ["ws"] }
crossbeam-channel = { version = "0.5.10" }
tower-http = { version = "0.5.0", features = ["fs", "full"] }
open = { version = "5.0.1" }
