[package]
name = "pdfviewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.3", features = ["ws"] }
crossbeam-channel = { version = "0.5.10" }
tower-http = { version = "0.5.0", features = ["fs", "full"] }
open = { version = "5.0.1" }
clap = { version = "4.4.13", features = ["cargo", "derive"] }
dirs = "5.0.1"

[profile.release]
opt-level = 'z'
strip = true
lto = true
codegen-units = 1
panic = "abort"
